# shabang

./: README.md  components.json  index.html  package-lock.json  package.json  test-fracture.html  tsconfig.json  vite.config.ts
public/: index.html
src/: App.tsx  input.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs  setup.rs  shortcut.rs
src-tauri/src/app/api/: javascript.rs
src-tauri/src/app/search/: application.rs  controlpanel.rs  everything.rs  mod.rs
src-tauri/src/app/search/everything/: everything.rs
src-tauri/src/app/settings/: mod.rs  settings.rs  shortcuts.rs
src-tauri/src/app/types/: search.rs
src/backend/: command.tsx
src/components/: FakeBackground.tsx  desmos.tsx
src/components/ui/: QuickWidgets.tsx  SettingBar.tsx  layout.tsx  tabs.tsx
src/components/ui/Results/: CalculatorResult.tsx  ContextMenu.tsx  FileResult.tsx  Result.tsx  ResultsLayout.tsx  SettingBar.tsx  index.tsx
src/components/ui/SearchBar/: SpecialCharacters.tsx  index.tsx
src/components/ui/base/: ContextMenu.tsx  Panel.tsx  (+10 more)
src/constants/: fileIcons.tsx  files.tsx
src/hooks/: useApp.tsx  useBlurWindow.tsx  useDarkMode.tsx  useOpenWindow.tsx  useSettings.tsx  useWindow.tsx
src/hooks/search/: Bangs.tsx  math.tsx  searchType.tsx  useSearch.tsx
src/settings/: defaultBangs.tsx  settings.tsx
src/styles/: App.css  Results.css  SearchBar.css  SettingsBar.css  TagList.css  Theme.css
src/types/: searchEvent.tsx  searchTypes.tsx
src/util/: keyboard.tsx  time.tsx
